# educonnect-pro

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  start.py
backend/src/: database_init.py  main.py
backend/src/config/: database.py  settings.py
backend/src/models/: __init__.py  class_model.py  database.py  user.py
backend/src/routes/: auth.py  classes.py
backend/src/services/: auth.py  database.py  user.py
backend/tests/: conftest.py  test_auth.py  test_classes.py
desktop/: package.json
docs/: CNAME  _config.yml  api-guide.md  contributing.md  database-setup.md  deployment.md  frontend-guide.md  getting-started.md  github-pages-setup.md  index.html  next-steps.md  testing-guide.md  troubleshooting.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/classes/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ClassForm.tsx  ConfirmDialog.tsx
frontend/src/shared/: types.ts
scripts/: setup-dev-simple.bat  setup-dev.bat  setup-pnpm-progress.bat  setup-with-progress.bat  start-dev.bat  start-dev.sh  start-manual.bat  test-backend.bat  test-backend.sh
shared/: types.ts
